<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".feature.weatherscreen.ui.MainActivity">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_toolbar"
        android:elevation="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/ToolbarTextAppearance.Title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCitySearch"
                style="@style/ToolbarSearchStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="40dp"
                android:imeOptions="actionSearch"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ivCitySearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="?attr/colorToolbarEditTextIconTint"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="ru.alexadler9.weatherfetcher.feature.weatherscreen.ui.weatherfragment.WeatherFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_weather" />

</LinearLayout>